# eraserface

./: .gitignore  CMakeLists.txt  README.md
cmake/: CheckCxxCompilerSupport.cmake
example/: CMakeLists.txt  basic_example.cpp
include/eraserface/: eraserface.hpp  implementation_readme.hpp
test/: CMakeLists.txt  basic_overload.cpp  const_lvalue_ref_arg_forwarding.cpp  copy_arg_forwarding.cpp  lvalue_ref_arg_forwarding.cpp  member_data_read.cpp  rvalue_ref_arg_forwarding.cpp  shared_reassignment.cpp  template_overload.cpp
